lib/poison/bootstrap/compiler/grammar.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


# vim: filetype=treetop

module Poison
  module Grammar
    include Treetop::Runtime

    def root
      @root ||= :poison
    end

    module Poison0
      def hh
        elements[0]
      end

      def s
        elements[1]
      end

      def end_of_file
        elements[2]
      end
    end

    module Poison1
      def node
        Syntax::Script.new s.node
      end
    end

    def _nt_poison
      start_index = index
      if node_cache[:poison].has_key?(index)
        cached = node_cache[:poison][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_hh
      s0 << r1
      if r1
        r2 = _nt_statements
        s0 << r2
        if r2
          r3 = _nt_end_of_file
          s0 << r3
        end
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(Poison0)
        r0.extend(Poison1)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:poison][start_index] = r0

      r0
    end

    module Statements0
      def sep
        elements[0]
      end

      def s2
        elements[1]
      end
    end

    module Statements1
      def s1
        elements[0]
      end

    end

    module Statements2
      def node
        stmts = respond_to?(:s2) ? Array(s2.node) : []
        stmts.unshift s1.node
        Syntax::Statements.new stmts
      end
    end

    module Statements3
      def node
        Syntax::NilKind.new
      end
    end

    def _nt_statements
      start_index = index
      if node_cache[:statements].has_key?(index)
        cached = node_cache[:statements][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0 = index
      i1, s1 = index, []
      r2 = _nt_stmt
      s1 << r2
      if r2
        s3, i3 = [], index
        loop do
          i4, s4 = index, []
          r5 = _nt_sep
          s4 << r5
          if r5
            r6 = _nt_stmt
            s4 << r6
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Statements0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            s3 << r4
          else
            break
          end
        end
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        s1 << r3
        if r3
          r8 = _nt_sep
          if r8
            r7 = r8
          else
            r7 = instantiate_node(SyntaxNode,input, index...index)
          end
          s1 << r7
        end
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Statements1)
        r1.extend(Statements2)
      else
        @index = i1
        r1 = nil
      end
      if r1
        r0 = r1
      else
        if has_terminal?('', false, index)
          r9 = instantiate_node(SyntaxNode,input, index...(index + 0))
          r9.extend(Statements3)
          @index += 0
        else
          terminal_parse_failure('')
          r9 = nil
        end
        if r9
          r0 = r9
        else
          @index = i0
          r0 = nil
        end
      end

      node_cache[:statements][start_index] = r0

      r0
    end

    module Stmt0
      def or
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Stmt1
      def and
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Stmt2
      def s
        elements[0]
      end

    end

    def _nt_stmt
      start_index = index
      if node_cache[:stmt].has_key?(index)
        cached = node_cache[:stmt][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_sets
      s0 << r1
      if r1
        s2, i2 = [], index
        loop do
          i3 = index
          i4, s4 = index, []
          r5 = _nt_or
          s4 << r5
          if r5
            r6 = _nt_sets
            s4 << r6
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Stmt0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r3 = r4
          else
            i7, s7 = index, []
            r8 = _nt_and
            s7 << r8
            if r8
              r9 = _nt_sets
              s7 << r9
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Stmt1)
            else
              @index = i7
              r7 = nil
            end
            if r7
              r3 = r7
            else
              @index = i3
              r3 = nil
            end
          end
          if r3
            s2 << r3
          else
            break
          end
        end
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        s0 << r2
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(Stmt2)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:stmt][start_index] = r0

      r0
    end

    module Sets0
      def e
        elements[0]
      end

      def assign
        elements[1]
      end

      def s
        elements[2]
      end
    end

    module Sets1
      def node
        Syntax::Assign.new e.node, s.node
      end
    end

    module Sets2
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets3
      def node
        expr = e.node
        op = Syntax::Or.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets4
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets5
      def node
        expr = e.node
        op = Syntax::And.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets6
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets7
      def node
        expr = e.node
        op = Syntax::Pipe.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets8
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets9
      def node
        expr = e.node
        op = Syntax::Caret.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets10
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets11
      def node
        expr = e.node
        op = Syntax::Amp.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets12
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets13
      def node
        expr = e.node
        op = Syntax::Bitl.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets14
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets15
      def node
        expr = e.node
        op = Syntax::Bitr.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets16
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets17
      def node
        expr = e.node
        op = Syntax::Plus.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets18
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets19
      def node
        expr = e.node
        op = Syntax::Minus.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets20
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets21
      def node
        expr = e.node
        op = Syntax::Times.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets22
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets23
      def node
        expr = e.node
        op = Syntax::Div.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets24
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets25
      def node
        expr = e.node
        op = Syntax::Rem.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    module Sets26
      def e
        elements[0]
      end

      def o
        elements[1]
      end

      def assign
        elements[2]
      end

      def s
        elements[3]
      end
    end

    module Sets27
      def node
        expr = e.node
        op = Syntax::Pow.new expr, s.node
        Syntax::Assign.new expr, op
      end
    end

    def _nt_sets
      start_index = index
      if node_cache[:sets].has_key?(index)
        cached = node_cache[:sets][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0 = index
      i1, s1 = index, []
      r2 = _nt_eqs
      s1 << r2
      if r2
        r3 = _nt_assign
        s1 << r3
        if r3
          r4 = _nt_sets
          s1 << r4
        end
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Sets0)
        r1.extend(Sets1)
      else
        @index = i1
        r1 = nil
      end
      if r1
        r0 = r1
      else
        i5, s5 = index, []
        r6 = _nt_eqs
        s5 << r6
        if r6
          r7 = _nt_or
          s5 << r7
          if r7
            r8 = _nt_assign
            s5 << r8
            if r8
              r9 = _nt_sets
              s5 << r9
            end
          end
        end
        if s5.last
          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
          r5.extend(Sets2)
          r5.extend(Sets3)
        else
          @index = i5
          r5 = nil
        end
        if r5
          r0 = r5
        else
          i10, s10 = index, []
          r11 = _nt_eqs
          s10 << r11
          if r11
            r12 = _nt_and
            s10 << r12
            if r12
              r13 = _nt_assign
              s10 << r13
              if r13
                r14 = _nt_sets
                s10 << r14
              end
            end
          end
          if s10.last
            r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
            r10.extend(Sets4)
            r10.extend(Sets5)
          else
            @index = i10
            r10 = nil
          end
          if r10
            r0 = r10
          else
            i15, s15 = index, []
            r16 = _nt_eqs
            s15 << r16
            if r16
              r17 = _nt_pipe
              s15 << r17
              if r17
                r18 = _nt_assign
                s15 << r18
                if r18
                  r19 = _nt_sets
                  s15 << r19
                end
              end
            end
            if s15.last
              r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
              r15.extend(Sets6)
              r15.extend(Sets7)
            else
              @index = i15
              r15 = nil
            end
            if r15
              r0 = r15
            else
              i20, s20 = index, []
              r21 = _nt_eqs
              s20 << r21
              if r21
                r22 = _nt_caret
                s20 << r22
                if r22
                  r23 = _nt_assign
                  s20 << r23
                  if r23
                    r24 = _nt_sets
                    s20 << r24
                  end
                end
              end
              if s20.last
                r20 = instantiate_node(SyntaxNode,input, i20...index, s20)
                r20.extend(Sets8)
                r20.extend(Sets9)
              else
                @index = i20
                r20 = nil
              end
              if r20
                r0 = r20
              else
                i25, s25 = index, []
                r26 = _nt_eqs
                s25 << r26
                if r26
                  r27 = _nt_amp
                  s25 << r27
                  if r27
                    r28 = _nt_assign
                    s25 << r28
                    if r28
                      r29 = _nt_sets
                      s25 << r29
                    end
                  end
                end
                if s25.last
                  r25 = instantiate_node(SyntaxNode,input, i25...index, s25)
                  r25.extend(Sets10)
                  r25.extend(Sets11)
                else
                  @index = i25
                  r25 = nil
                end
                if r25
                  r0 = r25
                else
                  i30, s30 = index, []
                  r31 = _nt_eqs
                  s30 << r31
                  if r31
                    r32 = _nt_bitl
                    s30 << r32
                    if r32
                      r33 = _nt_assign
                      s30 << r33
                      if r33
                        r34 = _nt_sets
                        s30 << r34
                      end
                    end
                  end
                  if s30.last
                    r30 = instantiate_node(SyntaxNode,input, i30...index, s30)
                    r30.extend(Sets12)
                    r30.extend(Sets13)
                  else
                    @index = i30
                    r30 = nil
                  end
                  if r30
                    r0 = r30
                  else
                    i35, s35 = index, []
                    r36 = _nt_eqs
                    s35 << r36
                    if r36
                      r37 = _nt_bitr
                      s35 << r37
                      if r37
                        r38 = _nt_assign
                        s35 << r38
                        if r38
                          r39 = _nt_sets
                          s35 << r39
                        end
                      end
                    end
                    if s35.last
                      r35 = instantiate_node(SyntaxNode,input, i35...index, s35)
                      r35.extend(Sets14)
                      r35.extend(Sets15)
                    else
                      @index = i35
                      r35 = nil
                    end
                    if r35
                      r0 = r35
                    else
                      i40, s40 = index, []
                      r41 = _nt_eqs
                      s40 << r41
                      if r41
                        r42 = _nt_plus
                        s40 << r42
                        if r42
                          r43 = _nt_assign
                          s40 << r43
                          if r43
                            r44 = _nt_sets
                            s40 << r44
                          end
                        end
                      end
                      if s40.last
                        r40 = instantiate_node(SyntaxNode,input, i40...index, s40)
                        r40.extend(Sets16)
                        r40.extend(Sets17)
                      else
                        @index = i40
                        r40 = nil
                      end
                      if r40
                        r0 = r40
                      else
                        i45, s45 = index, []
                        r46 = _nt_eqs
                        s45 << r46
                        if r46
                          r47 = _nt_minus
                          s45 << r47
                          if r47
                            r48 = _nt_assign
                            s45 << r48
                            if r48
                              r49 = _nt_sets
                              s45 << r49
                            end
                          end
                        end
                        if s45.last
                          r45 = instantiate_node(SyntaxNode,input, i45...index, s45)
                          r45.extend(Sets18)
                          r45.extend(Sets19)
                        else
                          @index = i45
                          r45 = nil
                        end
                        if r45
                          r0 = r45
                        else
                          i50, s50 = index, []
                          r51 = _nt_eqs
                          s50 << r51
                          if r51
                            r52 = _nt_times
                            s50 << r52
                            if r52
                              r53 = _nt_assign
                              s50 << r53
                              if r53
                                r54 = _nt_sets
                                s50 << r54
                              end
                            end
                          end
                          if s50.last
                            r50 = instantiate_node(SyntaxNode,input, i50...index, s50)
                            r50.extend(Sets20)
                            r50.extend(Sets21)
                          else
                            @index = i50
                            r50 = nil
                          end
                          if r50
                            r0 = r50
                          else
                            i55, s55 = index, []
                            r56 = _nt_eqs
                            s55 << r56
                            if r56
                              r57 = _nt_div
                              s55 << r57
                              if r57
                                r58 = _nt_assign
                                s55 << r58
                                if r58
                                  r59 = _nt_sets
                                  s55 << r59
                                end
                              end
                            end
                            if s55.last
                              r55 = instantiate_node(SyntaxNode,input, i55...index, s55)
                              r55.extend(Sets22)
                              r55.extend(Sets23)
                            else
                              @index = i55
                              r55 = nil
                            end
                            if r55
                              r0 = r55
                            else
                              i60, s60 = index, []
                              r61 = _nt_eqs
                              s60 << r61
                              if r61
                                r62 = _nt_rem
                                s60 << r62
                                if r62
                                  r63 = _nt_assign
                                  s60 << r63
                                  if r63
                                    r64 = _nt_sets
                                    s60 << r64
                                  end
                                end
                              end
                              if s60.last
                                r60 = instantiate_node(SyntaxNode,input, i60...index, s60)
                                r60.extend(Sets24)
                                r60.extend(Sets25)
                              else
                                @index = i60
                                r60 = nil
                              end
                              if r60
                                r0 = r60
                              else
                                i65, s65 = index, []
                                r66 = _nt_eqs
                                s65 << r66
                                if r66
                                  r67 = _nt_pow
                                  s65 << r67
                                  if r67
                                    r68 = _nt_assign
                                    s65 << r68
                                    if r68
                                      r69 = _nt_sets
                                      s65 << r69
                                    end
                                  end
                                end
                                if s65.last
                                  r65 = instantiate_node(SyntaxNode,input, i65...index, s65)
                                  r65.extend(Sets26)
                                  r65.extend(Sets27)
                                else
                                  @index = i65
                                  r65 = nil
                                end
                                if r65
                                  r0 = r65
                                else
                                  r70 = _nt_eqs
                                  if r70
                                    r0 = r70
                                  else
                                    @index = i0
                                    r0 = nil
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end

      node_cache[:sets][start_index] = r0

      r0
    end

    module Eqs0
      def cmp
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Eqs1
      def eq
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Eqs2
      def neq
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Eqs3
      def c
        elements[0]
      end

    end

    def _nt_eqs
      start_index = index
      if node_cache[:eqs].has_key?(index)
        cached = node_cache[:eqs][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_cmps
      s0 << r1
      if r1
        s2, i2 = [], index
        loop do
          i3 = index
          i4, s4 = index, []
          r5 = _nt_cmp
          s4 << r5
          if r5
            r6 = _nt_cmps
            s4 << r6
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Eqs0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r3 = r4
          else
            i7, s7 = index, []
            r8 = _nt_eq
            s7 << r8
            if r8
              r9 = _nt_cmps
              s7 << r9
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Eqs1)
            else
              @index = i7
              r7 = nil
            end
            if r7
              r3 = r7
            else
              i10, s10 = index, []
              r11 = _nt_neq
              s10 << r11
              if r11
                r12 = _nt_cmps
                s10 << r12
              end
              if s10.last
                r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                r10.extend(Eqs2)
              else
                @index = i10
                r10 = nil
              end
              if r10
                r3 = r10
              else
                @index = i3
                r3 = nil
              end
            end
          end
          if r3
            s2 << r3
          else
            break
          end
        end
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        s0 << r2
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(Eqs3)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:eqs][start_index] = r0

      r0
    end

    module Cmps0
      def gte
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Cmps1
      def gt
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Cmps2
      def lte
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Cmps3
      def lt
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Cmps4
      def o
        elements[0]
      end

    end

    def _nt_cmps
      start_index = index
      if node_cache[:cmps].has_key?(index)
        cached = node_cache[:cmps][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_bitors
      s0 << r1
      if r1
        s2, i2 = [], index
        loop do
          i3 = index
          i4, s4 = index, []
          r5 = _nt_gte
          s4 << r5
          if r5
            r6 = _nt_bitors
            s4 << r6
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Cmps0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r3 = r4
          else
            i7, s7 = index, []
            r8 = _nt_gt
            s7 << r8
            if r8
              r9 = _nt_bitors
              s7 << r9
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Cmps1)
            else
              @index = i7
              r7 = nil
            end
            if r7
              r3 = r7
            else
              i10, s10 = index, []
              r11 = _nt_lte
              s10 << r11
              if r11
                r12 = _nt_bitors
                s10 << r12
              end
              if s10.last
                r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                r10.extend(Cmps2)
              else
                @index = i10
                r10 = nil
              end
              if r10
                r3 = r10
              else
                i13, s13 = index, []
                r14 = _nt_lt
                s13 << r14
                if r14
                  r15 = _nt_bitors
                  s13 << r15
                end
                if s13.last
                  r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
                  r13.extend(Cmps3)
                else
                  @index = i13
                  r13 = nil
                end
                if r13
                  r3 = r13
                else
                  @index = i3
                  r3 = nil
                end
              end
            end
          end
          if r3
            s2 << r3
          else
            break
          end
        end
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        s0 << r2
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(Cmps4)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:cmps][start_index] = r0

      r0
    end

    module Bitors0
      def pipe
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Bitors1
      def caret
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Bitors2
      def a
        elements[0]
      end

    end

    def _nt_bitors
      start_index = index
      if node_cache[:bitors].has_key?(index)
        cached = node_cache[:bitors][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end

      i0, s0 = index, []
      r1 = _nt_bitand
      s0 << r1
      if r1
        s2, i2 = [], index
        loop do
          i3 = index
          i4, s4 = index, []
          r5 = _nt_pipe
          s4 << r5
          if r5
            r6 = _nt_bitand
            s4 << r6
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(Bitors0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r3 = r4
          else
            i7, s7 = index, []
            r8 = _nt_caret
            s7 << r8
            if r8
              r9 = _nt_bitand
              s7 << r9
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Bitors1)
            else
              @index = i7
              r7 = nil
            end
            if r7
              r3 = r7
            else
              @index = i3
              r3 = nil
            end
          end
          if r3
            s2 << r3
          else
            break
          end
        end
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        s0 << r2
      end
      if s0.last
        r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
        r0.extend(Bitors2)
      else
        @index = i0
        r0 = nil
      end

      node_cache[:bitors][start_index] = r0

      r0
    end

    module Bitand0
      def amp
        elements[0]
      end

      def x
        elements[1]
      end
    end

    module Bitand1
      def b
        elements[0]
      end

    end

    def _nt_bitand
      start_index = index
      if node_cache[:bitand].has_key?(index)
        cached = node_cache[:bitand][index]
        if cached
          cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
          @index = cached.interval.end
        end
        return cached
      end
